# align-system

./: .gitignore  CHANGELOG.md  README.md  baseline_system.py  baseline_system_local_files.py  pyproject.toml  requirements.txt
adm_configs/: kaleido_config.yml  outlines_demo.yml  persona_adm_config.yml  random.yml  single_kdma_adm_config.yml
adm_configs/metrics-evaluation/: hybrid_kaleido_adept_high.yml  hybrid_kaleido_adept_high_no_other_choices.yml  hybrid_kaleido_adept_low.yml  hybrid_kaleido_adept_low_no_other_choices.yml  hybrid_kaleido_soartech_high.yml  hybrid_kaleido_soartech_high_no_other_choices.yml  hybrid_kaleido_soartech_high_vrd_rephrase1.yml  hybrid_kaleido_soartech_high_vrd_rephrase2.yml  hybrid_kaleido_soartech_high_vrd_rephrase3.yml  hybrid_kaleido_soartech_high_vrd_rephrase4.yml  hybrid_kaleido_soartech_high_vrd_rephrase5.yml  hybrid_kaleido_soartech_low.yml  hybrid_kaleido_soartech_low_no_other_choices.yml  hybrid_kaleido_soartech_low_vrd_rephrase1.yml  hybrid_kaleido_soartech_low_vrd_rephrase3.yml  hybrid_kaleido_soartech_low_vrd_rephrase4.yml  hybrid_kaleido_soartech_low_vrd_rephrase5.yml  hybrid_kaleido_xl_adept_high.yml  hybrid_kaleido_xl_adept_low.yml  hybrid_kaleido_xl_soartech_high.yml  hybrid_kaleido_xl_soartech_low.yml  hybrid_kaleido_xxl_adept_high.yml  hybrid_kaleido_xxl_adept_low.yml  hybrid_kaleido_xxl_soartech_high.yml  hybrid_kaleido_xxl_soartech_low.yml  random_adept_high.yml  random_adept_low.yml  random_soartech_high.yml  random_soartech_low.yml  single_kdma_adm_adept_baseline.yml  single_kdma_adm_adept_baseline_low.yml  single_kdma_adm_adept_high.yml  single_kdma_adm_adept_high_no_negatives.yml  single_kdma_adm_adept_low.yml  single_kdma_adm_adept_low_no_negatives.yml  single_kdma_adm_soartech_baseline.yml  single_kdma_adm_soartech_baseline_low.yml  single_kdma_adm_soartech_high.yml  single_kdma_adm_soartech_high_no_negatives.yml  single_kdma_adm_soartech_low.yml  (+1 more)
adm_configs/metrics-evaluation/delivered/: hybrid_kaleido.yml  (+4 more)
algorithms/: llama_index.py  llm_baseline.py
align_system/: __init__.py
align_system/algorithms/: __init__.py  abstracts.py  adms.py  apply_treatment.py  chat_kdma_predicting_adm.py  hybrid_kaleido_adm.py  kaleido.py  kaleido_adm.py  llama_2_kdma_predicting_adm.py  llama_2_single_kdma_adm.py  llama_index.py  llama_index_retriever.py  llm_baseline.py  llm_chat_baseline.py  multi_comparison_adm.py  oracle_adm.py  outlines_adm.py  outlines_hybrid_regression_adm.py  outlines_kdma_regression_adm.py  outlines_persona_adm.py  outlines_regression_adm.py  outlines_regression_adm_comparative.py  persona_adm.py  pulse_tagging_adm.py  random_adm.py  relevance_oracle_adm.py  relevance_outlines_regression_adm_comparative.py  single_kdma_adm_v2.py
align_system/cli/: baseline_system.py  baseline_system_local_files.py  new_run_align_system.py  run_action_based_align_system.py  run_action_based_chat_baseline.py  run_align_system.py  run_align_system_hydra.py  run_chat_baseline.py  run_kaleido_system.py  template.py  template_action_based.py  test_drive.py
align_system/configs/: action_based.yaml
align_system/evaluation/: adm_evaluator.py  automated_decision_maker.py  bbn_evaluator.py  itm_dataset.py
align_system/interfaces/: abstracts.py  cli_builder.py  csv_file_interface.py  input_output_file.py  local_files.py  ta1_adept_service.py  ta1_soartech_service.py  ta3_caci_action_based_service.py  ta3_caci_service.py
align_system/language_model_lib/: __init__.py  chat_langauge_model.py  chat_language_model.py  dialog.py  dialog_tokenizer.py  language_model.py  llama_2_kdma_predicting_adm.py  test_chat_language_model.py  test_language_model.py  util.py
align_system/prompt_engineering/: common.py  kdma_descriptions.yml  kdma_descriptions_v2.yml  naacl24_kdma_descriptions.yml  opinionqa_kdma_descriptions.yml  outlines_prompts.py
align_system/similarity_measures/: __init__.py  bert.py  bert_score.py
align_system/tests/: test_chat_language_model.py  test_language_model.py  test_voting.py
align_system/utils/: __init__.py  adm_utils.py  alignment_utils.py  distribution_matching_utils.py  enums.py  hydrate_state.py  incontext_utils.py  kde_utils.py  logging.py  outlines_prompts_utils.py  swagger_models_utils.py  voting.py
configs/: action_based.yaml
configs/adm/: hybrid_kaleido.yaml  oracle.yaml  single_kdma_aligned.yaml  single_kdma_baseline.yaml
configs/alignment_target/: maximization_high.yaml  maximization_low.yaml  moral_deservingness_high.yaml  moral_deservingness_low.yaml
configs/interface/: input_output_file.yaml  ta3.yaml
docs/: creating_a_custom_system_script.md  developer_setup.md  external_interfaces.md  integration_testing.md
example_data/input_output_files/: oracle_adept_training_input_output.json  oracle_soartech_training_input_output.json
example_data/scenario_1/: alignment_target.json  probe4.json
prompt_engineering/: common.py
similarity_measures/: bert.py
tests/: run_integration_test.py
tests/data/: adept-mj1-train-subset.json  soartech-qol-dre-1-train-subset.json
utils/: enums.py
(+393 files in other folders)
